--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,11 @@ a {
   color: var(--color-03) !important;
 }
 
+textarea.form-control {
+  height: 150px !important;
+  padding-top: 1.5rem !important;
+}
+
 .btn {
   border-radius: 30px !important;
   padding: 0.5rem 1.5rem !important;
